syntax = "proto3";
package game.setting.proto;

import "pkg/mod/serve/fish_comm/flux/common@v0.1.1/proto/common.proto";
import "serve/service_fish/domain/auth/proto/auth.proto";
import "serve/service_fish/domain/gamerecovery/proto/game_recovery.proto";

message StripsCall {
    common.proto.EMSGID msgid               = 1;
    string token                            = 2;
}

message StripsRecall {
    message SymbolDef {
        enum PayType {
            K_xFORTEST                      = 0;
            K_xBET                          = 1;
            K_xTOTALBET                     = 2;
            K_xTOTALBET_BONUSTIMES          = 3;
            K_xTOTALBETxRANDOM              = 4;
        }
        enum SymbolType {
            K_FORTEST                       = 0;
            K_SYMBOL                        = 1;
            K_BONUS                         = 2;
        }
        uint32 symbol_id                    = 1;
        SymbolType symbol_type              = 2;
        uint32 layer_id                     = 3;
        PayType pay_type                    = 4;
        repeated int64 pays                 = 5;
        repeated int32 rounds               = 6;    // 子彈數量 or 抽紅包次數
    }
    common.proto.EMSGID msgid               = 1;
    common.proto.Status.Code status_code    = 2;
    repeated SymbolDef all_symbol_def       = 3;
    uint32 symbol_max_layer                 = 4;    // 總共幾種魚 Objects
    string room_uuid                        = 5;
}

message ConfigCall {
    common.proto.EMSGID msgid               = 1;
    string token                            = 2;
    string game_id                          = 3;
    bool clear_power_cycle                  = 4;    // 是否強制清除記錄
    uint32 version                          = 5;    // proto version
    uint32 game_version                     = 6;    // game version
    uint32 subgame_id                       = 7;
}

message ConfigRecall {
    message Bets {
        repeated uint32 bet                      = 1;    // 每階段砲台的 bets
    }
    common.proto.EMSGID msgid                    = 1;
    common.proto.Status.Code status_code         = 2;
    string room_uuid                             = 3;
    repeated Bets levels                         = 4;    // N 階段砲台
    repeated uint32 line                         = 5;    // 目前都是 1
    repeated uint32 rates                        = 6;    // 廳的 rates
    uint32 rates_default_index                   = 7;
    repeated string languages                    = 8;
    uint32 languages_default_index               = 9;
    auth.proto.UserInfo player_info              = 10;
    uint32 next_scene                            = 11;   // 魚場景
    game.recovery.proto.Mercenary mercenary_info = 12;   // 傭兵資訊
}
